@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2002-06-15  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/sparc32/v9/udiv.asm: New file.
+
 2002-06-15  Kevin Ryde  <kevin@swox.se>
 
 	* acinclude.m4 (GMP_GCC_VERSION_GE): Correction to recognising mingw
